Upgrade to Spring Boot 3 and disabled keycloak integration temporally due to migration to SpringBoot3